src/Afup/BarometreBundle/Resources/assets/sass/_global.scss
body {
    padding-top: $navbar-height;
}

/* Menu */

.menu {
    position: fixed;
    padding-top: $grid-gutter-width/2;
    padding-bottom: $grid-gutter-width/2;
}

/* Header */

.navbar-brand {
    font-weight: 500;
    text-transform: uppercase;
}

.logo {

    display: block;
    float: left;

    &.afup {
        height: 50px;
        margin: 5px 20px;
    }

    &.agencee {
        height: 38px;
        margin: 11px 20px;
    }
}

/* Footer */

.page-footer {

    text-align: center;
    margin-top: $grid-gutter-width;

    > .content {
        padding: $grid-gutter-width/2;
        padding-top: $grid-gutter-width;
        border-top: 1px solid $gray-lighter;
        margin-bottom: 0;
    }
}

/* Main */

.main {
    margin: 0 $grid-gutter-width/2;

    .content h1.page-header {
        margin-top: 20px;
    }
}

/* Common */

.mg-top {
    margin-top: $grid-gutter-width/2;
}
.mg-bottom {
    margin-bottom: $grid-gutter-width/2;
}
.mg-right {
    margin-right: $grid-gutter-width/2;
}
.mg-left {
    margin-left: $grid-gutter-width/2;
}

/* Table sorter */

.icon-unsorted {
    opacity: 0.2;
}

/* Select 2 */

.select2-container-multi .select2-choices .select2-search-choice {
    background: $afup-blue;
    color: white;
    border: 1px solid darken($afup-blue, 25%);
}

.select2-drop {
    z-index: $zindex-navbar - 50;
}
.select2-drop-mask {
    z-index: $zindex-navbar - 60;
}

.select2-search-choice-close {
    background: none;
    color: #ffffff;
    width: 12px;
    height: 12px;
    font-size: 20px;
    margin-top: -7px;
    opacity: 0.8;

    &:before {
        content: "×";
    }

    &:hover {
        color: #ffffff;
        text-decoration: none;
        opacity: 1;
    }
}

